--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testeamos Parcel</title>
-    <script src="/codigo.js"></script>
+    <script src="./javascript/index.js"></script>
 </head>
 <body>
     
