--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <script src="./javascript/index.js"></script>
 </head>
 <body>
-    
+    <button id="boton">Esto es un botón gris</button>
 
 </body>
 </html>
