Avance sobre jQuery

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../node_modules/jquery/dist/jquery.js"></script>
     <title>Testeamos Parcel</title>
-    <script src="./javascript/index.js"></script>
-</head>
-<body>
-    <button id="boton">Esto es un botón gris</button>
 
+</head>
+<body style="background-color: black;">
+    <button id="boton">Esto es un botón gris</button>
+    <script src="./javascript/index.js"></script> 
 </body>
 </html>
