Avance sobre interactividad en jQuery

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,25 @@
     <title>Testeamos Parcel</title>
 
 </head>
-<body style="background-color: black;">
+<body >
     <button id="boton">Esto es un botón gris</button>
+    <h1>Maestro</h1>
+    <ul id="maestro">
+
+    </ul>
+
+    <h1>Detalle</h1>
+    <form>
+
+            <input type="hidden" name="id", id="id"><br>
+            
+            <label for="nombre">Nombre:</label>
+            <input type = "text" id="nombre" name="nombre"><br> 
+
+            <label for="apellido">Apellido:</label>
+            <input type="text" id="apellido" name="apellido"> 
+
+    </form>
     <script src="./javascript/index.js"></script> 
 </body>
 </html>
